Kubernetes/service-mesh/ingress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-external # aks-istio-ingressgateway-external = aks , ingressgateway = local
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
