Kubernetes/service-mesh/ingress/https-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: https-vs
spec:
  hosts:
    - "*"
  gateways:
    - https-gateway
  http:
    - route:
      - destination:
          host: nginx-service.default.svc.cluster.local
          port:
            number: 8083
