Kubernetes/service-mesh/ingress/kialivscv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-service
spec:
  hosts:
    - "kiali.homelab.me"
  gateways:
    - my-gateway
  http:
    - route:
      - destination:
          host: kiali.istio-system.svc.cluster.local
          port:
            number: 20001
