Kubernetes/service-mesh/ingress/nginx-apache-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-apache-service
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - name : http-primary
    - route:
      - destination:
          host: nginx-service.default.svc.cluster.local
          port:
            number: 8083
          weight: 100
      - destination:
          host: apache-service.default.svc.cluster.local
          port:
            number: 8083
          weight: 0
