Kubernetes/service-mesh/ingress/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
    - "gateway.homelab.me"
  gateways:
    - my-gateway
  http:
    - match: 
        - uri:
            prefix: "/a"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            port:
              number: 8083
          weight: 100
    - match: 
        - uri:
            prefix: "/b"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: webapp.fiscal-ns.svc.cluster.local
            port:
              number: 5000
    - route:
      - destination:
          host: nginx-service.default.svc.cluster.local
          port:
            number: 8083
