Kubernetes/service-mesh/ingress/vscv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: staging-service
spec:
  hosts:
    - "staging.homelab.me"
  gateways:
    - my-gateway
  http:
    - route:
      - destination:
          host: nginx-service.nginx-staging.svc.cluster.local
          port:
            number: 8083
